finish stage 7.